<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FDFDFD"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="229dp"
        android:layout_height="81dp"
        android:fontFamily="sans-serif"
        android:text="@string/edakitari"
        android:textAlignment="center"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.415" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="226dp"
        android:layout_height="128dp"
        android:contentDescription="@string/edakitari_image"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_local_hospital_24" />

    <TextView
        android:id="@+id/edakitari_description"
        android:layout_width="224dp"
        android:layout_height="34dp"
        android:layout_marginTop="124dp"
        android:text="@string/affordable_healthcare_for_all"
        android:textAlignment="center"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/sign_up"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_marginTop="48dp"
        android:text="@string/sign_up"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.175"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edakitari_description" />

    <ImageView
        android:id="@+id/thumbs_sign_in"
        android:layout_width="33dp"
        android:layout_height="27dp"
        android:layout_marginTop="11dp"
        android:layout_marginBottom="10dp"
        android:background="#00EFE9E9"
        android:backgroundTint="#FDFDFD"
        android:foregroundTint="#00EFEDED"
        android:translationZ="3dp"
        app:layout_constraintBottom_toBottomOf="@+id/sign_in"
        app:layout_constraintEnd_toEndOf="@id/sign_in"
        app:layout_constraintHorizontal_bias="0.114"
        app:layout_constraintStart_toStartOf="@id/sign_in"
        app:layout_constraintTop_toTopOf="@+id/sign_in"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_baseline_thumb_up_24"
        app:tint="#FBFBFB"
        android:contentDescription="@string/thumb_icon_sign_up" />

    <Button
        android:id="@+id/sign_in"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_marginTop="48dp"
        android:text="@string/sign_in"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.391"
        app:layout_constraintStart_toEndOf="@+id/sign_up"
        app:layout_constraintTop_toBottomOf="@+id/edakitari_description" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:layout_marginBottom="13dp"
        android:translationZ="2dp"
        app:layout_constraintBottom_toBottomOf="@+id/sign_up"
        app:layout_constraintEnd_toEndOf="@id/sign_up"
        app:layout_constraintHorizontal_bias="0.114"
        app:layout_constraintStart_toStartOf="@id/sign_up"
        app:layout_constraintTop_toTopOf="@+id/sign_up"
        app:srcCompat="@drawable/ic_baseline_person_add_24"
        app:tint="#F8F8F8"
        android:contentDescription="@string/sign_up_icon" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="thumbs_sign_in,sign_in" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="imageView3,sign_up" />


    <androidx.constraintlayout.widget.Group
        android:id="@+id/group5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="sign_up" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="sign_in" />

</androidx.constraintlayout.widget.ConstraintLayout>