<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/sing_in_image"
        android:layout_width="232dp"
        android:layout_height="194dp"
        android:layout_marginStart="198dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="189dp"
        android:contentDescription="@string/sign_in_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.524"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_verified_user_24" />

    <Button
        android:id="@+id/google_sign_btn"
        android:layout_width="171dp"
        android:layout_height="48dp"
        android:layout_marginTop="372dp"
        android:text="@string/google_sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sing_in_image" />

    <EditText
        android:id="@+id/email_input"
        android:layout_width="256dp"
        android:layout_height="48dp"
        android:layout_marginTop="104dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:labelFor="@id/email_sign_in"
        android:text="Enter Email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sing_in_image" />

    <EditText
        android:id="@+id/password_sign_in"
        android:layout_width="252dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:inputType="textPassword"
        android:text="Enter Password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_input" />

    <Button
        android:id="@+id/email_sign_in"
        android:layout_width="154dp"
        android:layout_height="48dp"
        android:layout_marginStart="132dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="125dp"
        android:text="@string/email_sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_sign_in" />
</androidx.constraintlayout.widget.ConstraintLayout>